Sample ToDoBackEnd Project

--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -4,3 +4,10 @@
 [sqlite]
     url=sqlite:///{db_path}
     db_path=app/database/sqlite/database.db
+
+[postgresql]
+    url=postgresql+psycopg2://{user}:{password}@{host_name}/{database}
+    user=postgres
+    password=<your_password>
+    host_name=localhost
+    database=nathanngo
